src/style/settings.scss
#settings-cog {
    position: absolute;
    top: 21px;
    right: 21px;
    margin: 0;
    cursor: pointer;
    font-size: 21px;
    opacity: 0.5;
    &:hover {
        opacity: 1;
    }
}

#settings-menu {
    width: 100%;
    label {
        margin-right: 10px;
        display: flex;
        align-items: center;
    }
}
.setting {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 8px 0;
    border-top: 1px solid rgba(255, 255, 255, 0.1);
    &:last-child {
        padding-bottom: 0;
    }
}

.setting .spacer {
    flex-grow: 1;
}

